--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
         </div>
     </div>
 
+    <script src="github-pages-config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
