--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https://web.archive.org https://*.web.archive.org https://lh7-rt.googleusercontent.com https://*.googleusercontent.com; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';">
-    <title>FreeDocs - Diff-Aware Assignment Viewer</title>
+      <title>FreeDocs - Google Docs Assignment Viewer (v1.1)</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
