Add local development configuration and update frontend for environment detection
- Created local-dev-config.js for local API endpoints
- Modified script.js to detect local environment and use appropriate config
- Included local-dev-config.js in index.html and public/index.html
- Updated LOCAL_DEVELOPMENT_GUIDE.md with setup instructions
- Added GitHub Actions workflow for deployment to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
     </div>
 
+    <script src="local-dev-config.js"></script>
     <script src="github-pages-config.js"></script>
     <script src="script.js"></script>
 </body>
