remove selected as default and add warnings

--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,19 @@
             
             <div class="options">
                 <label class="option">
-                    <input type="checkbox" id="treatAsCode" checked>
+                    <input type="checkbox" id="treatAsCode">
                     Auto-detect code blocks
                 </label>
                 <label class="option">
-                    <input type="checkbox" id="showDeletions" checked>
+                    <input type="checkbox" id="showDeletions">
                     Show deleted lines
                 </label>
+            </div>
+            
+            <div class="warning-section" id="warningSection" style="display: none;">
+                <div class="warning-message">
+                    ⚠️ <strong>Warning:</strong> The selected features are still in progress and might cause bugs or unexpected behavior.
+                </div>
             </div>
         </div>
 
